# AISpec-Driven-Online_Hackathon

./: .gitignore  CLAUDE.md  GEMINI.md
.claude/commands/: sp.constitution.md
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
backend/: .env  .gitignore  ass.py  main.py  pyproject.toml  requirements.txt  typeSchema.py  upload_to_qdrant.py  vercel.json  vercel_new.json
backend/Auth/: Auth.py
backend/guardrails/: input_guardrails.py
backend/tools/: read_data_to_qdrant.py
frontend/book/: .prettierignore  docusaurus.config.ts  package-lock.json  package.json  tailwind.config.js
frontend/book/.docusaurus/: client-manifest.json  client-modules.js  docusaurus.config.mjs  globalData.json  registry.js  routes.js  routesChunkNames.json
frontend/book/blog/: 2019-05-28-first-blog-post.md  2019-05-29-long-blog-post.md  2021-08-01-mdx-blog-post.mdx  authors.yml  tags.yml
frontend/book/docs/: intro.md
frontend/book/src/api/: Auth.ts  chatbot.ts
infra/scripts/: ingestion.py
specs/001-book-urdu-conversion/: plan.md  spec.md  tasks.md
specs/001-enhance-frontend-ui/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-fix-docusaurus-deployment/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-user-auth/: clarification_q1.md  plan.md  spec.md  tasks.md
specs/002-enhance-frontend-ui/: plan.md  spec.md  tasks.md
specs/002-remove-tailwind-css/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/1-physical-ai-robotics-book/: plan.md  spec.md  tasks.md
(+165 files in other folders)
