[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "python-dotenv==1.0.0",
    "fastapi==0.104.1",
    "openai-agents==0.6.2",
    "qdrant-client>=1.16.1",
    "uvicorn==0.24.0",
    "pydantic==2.12.3",
    "requests==2.31.0",
    "python-multipart==0.0.9",
]
